increase fixed z-index

--- a/example/styles/components/fixed.scss
+++ b/example/styles/components/fixed.scss
@@ -9,7 +9,7 @@
     bottom: $base * 3;
     left: $col-width * 0.5;
     right: $col-width * 0.5;
-    z-index: 1;
+    z-index: 2;
 
     &__pager {
       position: absolute;
